# rcProto-MOOS-master

./: LICENSE  README.md
moos-ivp-local/: CMakeLists.txt  CMakeLists.txt.save  log.txt
moos-ivp-local/lib/: libiGPSdProtobuf.so.0
moos-ivp-local/missions/: .LastOpenedMOOSLogDirectory
moos-ivp-local/missions/old/: clLaunch.sh  romulus.bhv  romulus.moos  romulusHelm.moos  shoreside.moos
moos-ivp-local/rcProto/: #ram.moos#  iGPSd.moos  launch.sh  loiter  out  ram.bhv  ram.bhv.0  ram.bhvll  ram.bhv~  ram.moos  ram.moos++  ram.moos~  stop.sh
moos-ivp-local/rcProto/LOG_ram/: LOG_ram._moos  LOG_ram.alog  LOG_ram.slog  LOG_ram.ylog  ram._bhv
moos-ivp-local/src/: CMakeLists.txt  CMakeLists.txt~
moos-ivp-local/src/iGPSd/: CMakeLists.txt  CMakeLists.txt~  iGPSd.moos  iGPSd.moos~
moos-ivp-local/src/iGPSd/docs/.svn/: all-wcprops  entries
moos-ivp-local/src/iGPSd/include/: iGPSd.h
moos-ivp-local/src/iGPSd/include/.svn/: all-wcprops  entries
moos-ivp-local/src/iGPSd/src/: iGPSd.cpp
moos-ivp-local/src/iGPSd/src/.svn/: all-wcprops  entries
moos-ivp-local/src/iGPSd/test/.svn/: all-wcprops  entries
moos-ivp-local/src/iMOOS2Serial/: CMakeLists.txt  CSerMOOS.cpp  CSerMOOS.cpp~  CSerMOOS.h  CSerMOOS.h~  CiMOOS2Serial.cpp  CiMOOS2Serial.cpp~  CiMOOS2Serial.h  CiMOOS2SerialMain.cpp  iMOOS2Serial.moos
moos-ivp-local/src/pOdometry/: .Odometry.cpp.swp  CMakeLists.txt  Odometry.cpp  Odometry.cpp~  Odometry.h  Odometry.h~  Odometry_Info.cpp  Odometry_Info.h  main.cpp
moos-ivp-local/src/pState/: CMakeLists.txt  CMakeLists.txt~  CpState.cpp  CpState.cpp~  CpState.h  CpState.h~  pState.moos  pStateMain.cpp
